security/istio/hashicorp-vault-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hashicorp-vault-server
  labels:
    app: camunda-platform # kpt-set: ${camunda-app-name}
    app.kubernetes.io/version: "1.0.0" # kpt-set: ${camunda-app-version}
    app.kubernetes.io/name: hashicorp-vault-server
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: VirtualService
spec:
  exportTo:
    - '*'
  gateways:
    - 'helix-ingress-gateway-internal-camunda/internal-camunda' # kpt-set: ${camunda-ingress-gateway-namespace}/${camunda-ingress-gateway-name}
  hosts:
    - 'vault.example.com' # kpt-set: vault.${camunda-domain}
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: hashicorp-vault
            port:
              number: 8200
